<resources>
    <string name="app_name">Mafos</string>

    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_mafos_icon">Mafos logo and name</string>

    <string name="google_user_fmt">Nama: %s</string>
    <string name="google_status_fmt">Email: %s</string>
    <string name="mafos_title_text">MAFOS</string>
    <string name="mafos_title_desc_text">Marketplace For Student</string>


</resources>