<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_all_gradient"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/mafos_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/titleDescText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mafos_title_desc_text"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/mafosIcon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="167dp"
            android:layout_height="202dp"
            android:background="@drawable/img"
            android:contentDescription="@string/desc_mafos_icon"
            android:shape="ring"
            android:src="@drawable/iconmafos" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/name"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Google Name : User" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/signOutAndDisconnect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <Button
                    android:id="@+id/signOutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="71dp"
                    android:layout_height="57dp"
                    android:layout_margin="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton12"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/home" />

                <ImageButton
                    android:id="@+id/orderButton"
                    android:layout_width="70dp"
                    android:layout_height="54dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/shopping" />

                <ImageButton
                    android:id="@+id/chatButton"
                    android:layout_width="74dp"
                    android:layout_height="55dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/speech" />

                <ImageButton
                    android:id="@+id/accountButton"
                    android:layout_width="63dp"
                    android:layout_height="55dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.714"
                    app:layout_constraintStart_toEndOf="@+id/imageButton4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/avatar" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>